ecmascript/parser/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames50_ES6/input.ts.stderr
error: A `set` accessor must have a corresponding `get` accessor
  --> $DIR/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames50_ES6/input.ts:13:9
   |
13 |     set [1 + 1]() {
   |         ^^^^^^^

